// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue-responsiveness > should reverse unordered values 1`] = `
<div>
  <pre>
    {
  "min": {
    "min": true,
    "max": true,
    "only": true
  },
  "max": {
    "min": true,
    "max": true,
    "only": true
  },
  "current": "min"
}
  </pre>
  <h2
    style="color: rgba(255, 255, 255, 0.4);"
  >
     Current interval: 
    <span
      style="color: rgb(186, 218, 85);"
    >
      min
    </span>
  </h2>
</div>
`;

exports[`vue-responsiveness > should work 1`] = `
<div>
  <pre>
    {
  "xs": {
    "min": true,
    "max": true,
    "only": true
  },
  "sm": {
    "min": true,
    "max": true,
    "only": true
  },
  "md": {
    "min": true,
    "max": true,
    "only": true
  },
  "lg": {
    "min": true,
    "max": true,
    "only": true
  },
  "xl": {
    "min": true,
    "max": true,
    "only": true
  },
  "xxl": {
    "min": true,
    "max": true,
    "only": true
  },
  "current": "xs"
}
  </pre>
  <h2
    style="color: rgba(255, 255, 255, 0.4);"
  >
     Current interval: 
    <span
      style="color: rgb(186, 218, 85);"
    >
      xs
    </span>
  </h2>
</div>
`;

exports[`vue-responsiveness > should work with custom breakpoints 1`] = `
<div>
  <pre>
    {
  "min": {
    "min": true,
    "max": true,
    "only": true
  },
  "max": {
    "min": true,
    "max": true,
    "only": true
  },
  "current": "min"
}
  </pre>
  <h2
    style="color: rgba(255, 255, 255, 0.4);"
  >
     Current interval: 
    <span
      style="color: rgb(186, 218, 85);"
    >
      min
    </span>
  </h2>
</div>
`;
